<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mask_group_welcome_background"
    tools:context=".view.sign_in.SignInActivity">


    <TextView
        android:id="@+id/hello_again_textView"
        android:layout_width="324sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/hello_again"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_back_textView"
        android:layout_width="366sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14sp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome_back_to_your_second_home"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello_again_textView" />

    <EditText
        android:id="@+id/user_name_editText"
        android:layout_width="353sp"
        android:layout_height="71sp"
        android:layout_marginTop="48dp"
        android:background="@drawable/card_border"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_back_textView" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="353sp"
        android:layout_height="71sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/card_border"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_editText" />

    <Button
        android:id="@+id/sign_in_BTN"
        android:layout_width="353sp"
        android:layout_height="71sp"
        android:layout_marginTop="68dp"
        android:background="@drawable/sign_in_button_background"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_editText" />

    <TextView
        android:id="@+id/recovery_password_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/recovery_password"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/password_editText"
        app:layout_constraintTop_toBottomOf="@+id/password_editText" />

    <TextView
        android:id="@+id/not_a_member_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/not_a_member"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_BTN" />

    <TextView
        android:id="@+id/register_now_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6sp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/register_now"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/not_a_member_textView"
        app:layout_constraintTop_toTopOf="@+id/not_a_member_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>