<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.add_product.view.AddProductActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="15dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="33dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow" />

    <TextView
        android:id="@+id/add_product_textView"
        android:layout_width="317dp"
        android:layout_height="42dp"
        android:layout_marginTop="26dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/add_product"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/add_product_images_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/add_product_images"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/add_product_textView" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product_images_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:orientation="horizontal"
        android:overScrollMode="never"
        android:paddingStart="16sp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="@+id/add_product_images_textView"
        app:layout_constraintTop_toBottomOf="@id/add_product_images_textView"
        tools:itemCount="2"
        tools:listitem="@layout/item_product_image" />

    <EditText
        android:id="@+id/product_name_editText"
        android:layout_width="353sp"
        android:layout_height="61sp"
        android:layout_marginTop="120dp"
        android:background="@drawable/card_border"
        android:hint="@string/product_name"
        android:paddingHorizontal="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/add_product_images_textView"
        app:layout_constraintTop_toBottomOf="@+id/add_product_images_textView" />

    <EditText
        android:id="@+id/product_info_editText"
        android:layout_width="353sp"
        android:layout_height="61sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/card_border"
        android:hint="@string/product_info"
        android:paddingHorizontal="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/product_name_editText"
        app:layout_constraintTop_toBottomOf="@+id/product_name_editText" />

    <EditText
        android:id="@+id/meal_editText"
        android:layout_width="353sp"
        android:layout_height="61sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/card_border"
        android:hint="@string/meal"
        android:editable="false"
        android:paddingHorizontal="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/product_info_editText"
        app:layout_constraintTop_toBottomOf="@+id/product_info_editText" />

    <EditText
        android:id="@+id/item_type_editText"
        android:layout_width="353sp"
        android:layout_height="61sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/card_border"
        android:hint="@string/item_type"
        android:editable="false"
        android:paddingHorizontal="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/meal_editText"
        app:layout_constraintTop_toBottomOf="@+id/meal_editText" />

    <EditText
        android:id="@+id/price_editText"
        android:layout_width="353sp"
        android:layout_height="61sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/card_border"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:paddingHorizontal="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/item_type_editText"
        app:layout_constraintTop_toBottomOf="@+id/item_type_editText" />

    <Button
        android:id="@+id/done_BTN"
        android:layout_width="353sp"
        android:layout_height="71sp"
        android:layout_marginTop="40dp"
        android:background="@drawable/sign_in_button_background"
        android:fontFamily="sans-serif-medium"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/price_editText"
        app:layout_constraintTop_toBottomOf="@id/price_editText" />

    <ImageView
        android:id="@+id/meal_up_arrow"
        android:layout_width="38dp"
        android:layout_height="14dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/meal_editText"
        app:srcCompat="@drawable/down_arrow_active" />

    <ImageView
        android:id="@+id/meal_down_arrow"
        android:layout_width="38dp"
        android:layout_height="14dp"
        android:layout_marginTop="17dp"
        app:layout_constraintEnd_toEndOf="@+id/meal_up_arrow"
        app:layout_constraintTop_toBottomOf="@+id/meal_up_arrow"
        app:srcCompat="@drawable/down_arrow_active" />

    <ImageView
        android:id="@+id/item_type_up_arrow"
        android:layout_width="38dp"
        android:layout_height="14dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="@+id/meal_down_arrow"
        app:layout_constraintTop_toBottomOf="@+id/meal_down_arrow"
        app:srcCompat="@drawable/down_arrow_active" />

    <ImageView
        android:id="@+id/item_type_down_arrow"
        android:layout_width="38dp"
        android:layout_height="14dp"
        android:layout_marginTop="17dp"
        app:layout_constraintEnd_toEndOf="@+id/item_type_up_arrow"
        app:layout_constraintTop_toBottomOf="@+id/item_type_up_arrow"
        app:srcCompat="@drawable/down_arrow_active" />

</androidx.constraintlayout.widget.ConstraintLayout>